First pass at cut-down JRE